sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nb = false
  do{
  for(i<- 0 to getNombreValeurs()-2){
    if (plusPetit(i,i+1)){
      echange(i,i+1)
      nb=true
    }
  }
  
  }
  while (nb=true)
}